[package]
name = "marble"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
version = "1.0.0-alpha.1"
edition = "2021"
description = "on-disk slab allocator"
license = "MIT/Apache-2.0"
repository = "https://github.com/komora-io/marble"
documentation = "https://docs.rs/marble/"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"

[features]
runtime_validation = []

[dev-dependencies]
env_logger = "0.10.0"
rand = "0.8.5"
criterion = {version = "0.5.1", features = ["html_reports"]}
serde = { version = "1.0.144", features = ["derive"] }
bincode = { version = "1.3.3" }


[dependencies]
bincode = "1.3.3"
crc32fast = "1.3.2"
crossbeam-queue = "0.3.8"
ebr = "0.2.8"
fault-injection = "1.0.9"
fnv = "1.0.7"
fs2 = "0.4.3"
inline-array = { version = "0.1.11", features = ["serde", "concurrent_map_minimum"] }
log = "0.4.19"
metadata-store = "0.2"
pagetable = "0.4.3"
rayon = "1.7.0"
serde = { version = "1.0.174", features = ["derive"] }

[[bench]]
name = "marble_bench"
path = "benches/marble_bench.rs"
harness = false

[[test]]
name = "crash_atomicity"
path = "tests/crash_atomicity.rs"
harness = false
