[package]
name = "marble"
authors = ["Tyler Neely <t@jujit.su>"]
version = "16.0.2"
edition = "2024"
description = "garbage-collecting on-disk object store"
license = "MIT/Apache-2.0"
repository = "https://github.com/komora-io/marble"
documentation = "https://docs.rs/marble/"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"

[features]
runtime_validation = ["rand"]

[dev-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
env_logger = "0.11.8"
rand = "0.9.1"
criterion = { version = "0.6.0", features = ["html_reports"] }
bincode =  { version = "2.0.1", features = ["serde"] }

[dependencies]
crc32fast = "1.3.2"
log = "0.4.17"
fs2 = "0.4.3"
pagetable = { version = "0.4" }
fault-injection = "1.0.7"
rand = { version = "0.8.5", optional = true }
concurrent-map = { version ="5.0" }

[[bench]]
name = "marble_bench"
path = "benches/marble_bench.rs"
harness = false

[[test]]
name = "crash_atomicity"
path = "tests/crash_atomicity.rs"
harness = false
